--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "mcp-json",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.0",
-    "tsc": "^2.0.4"
+    "@modelcontextprotocol/sdk": "^1.12.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": false
   }
 }
